--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,12 @@ permissions:
   contents: read
 
 jobs:
+  release-build:
+    uses: ./.github/workflows/build.yml
+
   pypi-publish:
+    needs: [release-build]
+
     runs-on: ubuntu-latest
 
     permissions:
@@ -28,7 +33,7 @@ jobs:
     environment:
       name: pypi
       # OPTIONAL: uncomment and update to include your PyPI project URL in the deployment status:
-      # url: https://pypi.org/p/YOURPROJECT
+      url: https://pypi.org/p/${{ github.event.repository.name }}
       #
       # ALTERNATIVE: if your GitHub Release name is the PyPI project version string
       # ALTERNATIVE: exactly, uncomment the following line instead:
