--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  release-build:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -17,9 +17,14 @@ jobs:
           python3 -m pip install --upgrade build
           python3 -m build
           python3 -m pip install dist/*.whl
-          whl2pyz --output dist/ --python "/usr/bin/env python3" --compress dist/*.whl
-      - name: Upload distributions
+          whl2pyz --output bin/ --python "/usr/bin/env python3" --compress dist/*.whl
+      - name: Upload dis artifact
         uses: actions/upload-artifact@v4
         with:
-          name: release-dists
+          name: dist
           path: dist/
+      - name: Upload bin artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: bin
+          path: bin/
