--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,18 +16,36 @@ permissions:
   contents: read
 
 jobs:
-  release-build:
+  build:
     uses: ./.github/workflows/build.yml
 
-  pypi-publish:
-    needs: [release-build]
-
+  github-release:
+    needs: [build]
     runs-on: ubuntu-latest
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Download dist artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: dist/
+      - name: Download bin artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: bin
+          path: bin/
+      - name: Upload artifacts to GitHub release
+        run: |
+          gh release upload "${{ github.event.release.tag_name }}" dist/* bin/*
 
+  pypi-publish:
+    needs: [build]
+    runs-on: ubuntu-latest
     permissions:
       # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
-
     # Dedicated environments with protections for publishing are strongly recommended.
     # For more information, see: https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment#deployment-protection-rules
     environment:
@@ -38,14 +56,12 @@ jobs:
       # ALTERNATIVE: if your GitHub Release name is the PyPI project version string
       # ALTERNATIVE: exactly, uncomment the following line instead:
       # url: https://pypi.org/project/YOURPROJECT/${{ github.event.release.name }}
-
     steps:
-      - name: Retrieve release distributions
+      - name: Download dist artifact
         uses: actions/download-artifact@v4
         with:
-          name: release-dists
+          name: dist
           path: dist/
-
       - name: Publish release distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
