--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
           python3 -m pip install --upgrade build
           python3 -m build
           python3 -m pip install dist/*.whl
-          whl2pyz --output bin/ --python "/usr/bin/env python3" --compress dist/*.whl
+          whl2pyz --python "/usr/bin/env python3" --compress dist/*.whl
       - name: Upload dis artifact
         uses: actions/upload-artifact@v4
         with:
