--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,15 +27,15 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: dist
-          path: dist/
+          path: ${{ runner.temp }}/dist/
       - name: Download bin artifact
         uses: actions/download-artifact@v4
         with:
           name: bin
-          path: bin/
+          path: ${{ runner.temp }}/bin/
       - name: Upload artifacts to GitHub release
         run: |
-          gh release upload "${{ github.event.release.tag_name }}" dist/* bin/*
+          gh release upload "${{ github.event.release.tag_name }}" "${{ runner.temp }}/dist/"* "${{ runner.temp }}/bin/"*
 
   pypi-publish:
     needs: [build]
@@ -48,19 +48,14 @@ jobs:
     # For more information, see: https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment#deployment-protection-rules
     environment:
       name: pypi
-      # OPTIONAL: uncomment and update to include your PyPI project URL in the deployment status:
       url: https://pypi.org/p/${{ github.event.repository.name }}
-      #
-      # ALTERNATIVE: if your GitHub Release name is the PyPI project version string
-      # ALTERNATIVE: exactly, uncomment the following line instead:
-      # url: https://pypi.org/project/YOURPROJECT/${{ github.event.release.name }}
     steps:
       - name: Download dist artifact
         uses: actions/download-artifact@v4
         with:
           name: dist
-          path: dist/
+          path: ${{ runner.temp }}/dist/
       - name: Publish release distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          packages-dir: dist/
+          packages-dir: ${{ runner.temp }}/dist/
