--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,18 +54,8 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: dist
-          path: ${{ runner.temp }}/dist/
-      - name: Debug
-        if: always()
-        run: |
-          sudo apt --yes install tree
-          tree "${{ runner.temp }}"
+          path: dist/
       - name: Publish release distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          packages-dir: ${{ runner.temp }}/dist/
-      - name: Debug
-        if: always()
-        run: |
-          sudo apt --yes install tree
-          tree "${{ runner.temp }}"
+          packages-dir: dist/
