--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "whl2pyz"
 description = "Generate Python executable zip archive for each entry point from a wheel package."
-version = "0.0.4"
-authors = [{name = "Alexis Giraudet"}]
+version = "0.0.5"
+authors = [{ name = "Alexis Giraudet" }]
 readme = "README.md"
 license = "GPL-3.0-or-later"
 keywords = ["whl", "wheel", "pyz", "zipapp"]
@@ -16,7 +16,7 @@ classifiers = [
   "Intended Audience :: Developers",
   "Topic :: Software Development :: Build Tools",
   "Topic :: System :: Archiving :: Packaging",
-  "Programming Language :: Python :: 3"
+  "Programming Language :: Python :: 3",
 ]
 
 [project.urls]
